<?xml version="1.0"?>
<package>
  <name>hand_following_controller</name>
  <version>0.1.0</version>
  <description>The hand following controller package</description>
  <url>https://github.com/KTH-RAS-HT14-G9/controllers/hand_following_controller</url>
  <license>BSD</license>

  <author email="tobias2@kth.se">Tobias Andersson</author>
  <author email="mmlosch@kth.se">Max Losch</author>
  <author email="dimm@kth.se">Diego Martinez Marrodan</author>
  <author email="tiagos@kth.se">Tiago Sebastiao</author>
  <author email="lanwang@kth.se">Lan Wang</author>

  <maintainer email="tobias2@kth.se">Tobias Andersson</maintainer>
  <maintainer email="mmlosch@kth.se">Max Losch</maintainer>
  <maintainer email="dimm@kth.se">Diego Martinez Marrodan</maintainer>
  <maintainer email="tiagos@kth.se">Tiago Sebastiao</maintainer>
  <maintainer email="lanwang@kth.se">Lan Wang</maintainer>
  
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>

</package>
